# wrap

./: .gitignore  CMakeLists.txt  Makefile  main.c  meson.build  wrap.c  wrap.h
examples/: timedprintloop.sh
src/: fork.c  fork_program.c  io.c  io_loop.c  main.c  pipe.c  pipes.c  poll.c  program.c  pty.c  readline.c  run_program.c  wrap.c  wrap.h
